--- a/Day 1/Day 1.html
+++ b/Day 1/Day 1.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>shefin</title>
+    <title>shefin s</title>
 </head>
 <body>
-    
+     wt
 </body>
 </html>
